<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">myTrack</string>
    <string name="title_section1">Map</string>
    <string name="title_section2">History</string>
    <string name="title_section3">Stub</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Record Location</string>
    <string name="action_settings">Settings</string>

	<string name="track_preference_title">Automatic Tracking</string>
	<string name="track_preference_on">Automatic tracking</string>
	<string name="track_preference_off">Manual tracking only</string>
	<string name="pref_syncConnectionType">This is a ListPreference!</string>
	<string name="pref_syncConnectionTypes_default">Presidents or something</string>

    <string name="popup_hint">Add Description</string>
    <string name="popup_cancelButtonText">Cancel</string>
    <string name="popup_addButtonText">Add</string>
    <string name="popup_deleteButtonText">Delete</string>
    <string name="popup_title">Add description</string>


    <string-array name="pref_syncConnectionTypes_entries">
        <item>Dwight D. Eisenhower</item>
        <item>John F. Kennedy</item>
        <item>Lyndon B. Johnson</item>
        <item>Richard Nixon</item>
        <item>Gerald Ford</item>
        <item>Jimmy Carter</item>
        <item>Ronald Reagan</item>
        <item>George H. W. Bush</item>
        <item>Bill Clinton</item>
        <item>George W. Bush</item>
        <item>Barack Obama</item>
    </string-array>

    <string-array name="pref_syncConnectionTypes_values">
        <item>Dwight D. Eisenhower</item>
        <item>John F. Kennedy</item>
        <item>Lyndon B. Johnson</item>
        <item>Richard Nixon</item>
        <item>Gerald Ford</item>
        <item>Jimmy Carter</item>
        <item>Ronald Reagan</item>
        <item>George H. W. Bush</item>
        <item>Bill Clinton</item>
        <item>George W. Bush</item>
        <item>Barack Obama</item>
    </string-array>

    <string name="title_activity_settings">Settings</string>



</resources>
