<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
<SwitchPreference
    android:key="pref_sync"
    android:title="@string/track_preference_title"
	android:summaryOn="@string/track_preference_on"
	android:summaryOff="@string/track_preference_off"
    android:defaultValue="true" />

<ListPreference
    android:dependency="pref_sync"
    android:key="pref_syncConnectionType"
    android:title="@string/pref_syncConnectionType"
    android:dialogTitle="@string/pref_syncConnectionTypes_default"
    android:entries="@array/pref_syncConnectionTypes_entries"
    android:entryValues="@array/pref_syncConnectionTypes_values"
    android:defaultValue="30" />

<!--<EditTextPreference-->
    <!--android:dependency="pref_sync"-->
    <!--android:key="pref_syncConnectionType"-->
    <!--android:title="Refresh interval"-->
    <!--android:inputType="number"-->
    <!--android:dialogTitle="Enter time (minutes) to refresh"-->
    <!--android:maxLength="3"-->
    <!--android:defaultValue="10" />-->


</PreferenceScreen>
