<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@android:color/background_light"
    android:weightSum="1">
    <RelativeLayout
        android:layout_width="236dp"
        android:layout_height="87dp"
        android:orientation="vertical"
        android:layout_margin="7dp"
        android:background="@android:color/background_light"
        android:layout_weight="0.05">

        <EditText
            android:id="@+id/editText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/popup_hint"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            android:id="@+id/cancel"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/popup_cancelButtonText"
            android:layout_below="@+id/editText"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <Button
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/popup_addButtonText"
            android:id="@+id/add"
            android:layout_below="@+id/editText"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

    </RelativeLayout>

</LinearLayout>

